--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -7,8 +7,10 @@
   width: 100%;
   justify-content: space-between;
   font-size: 48rpx;
-  align-items: flex-start;
-  padding: 60rpx 20rpx 120rpx；
+  align-items: center;
+  height:150rpx;
+  /* padding: 60rpx 20rpx 120rpx； */
+
 }
 .header_left {
   height: 100%;
@@ -17,7 +19,6 @@
   display: block;
   font-size: 48rpx;
   line-height:84rpx;
-  height: 100%;
 }
 .header_left_des {
   display: block;
@@ -26,8 +27,8 @@
   color:#b3b3b3;
 }
 .logo {
-  width: 170rpx;
-  height: 170rpx;
+  width: 180rpx;
+  height: 120rpx;
   margin-top:-14rpx;
   margin-bottom: 4rpx;
 }
@@ -56,7 +57,6 @@
 .icon-address {
   width: 48rpx;
   height: 64rpx;
-  margin-left: -8rpx;
 }
 .icon-time {
   width: 36rpx;
@@ -74,9 +74,9 @@
   margin-right: -16rpx;
 }
 .icon-picture {
-  width:50rpx;
-  height: 40rpx;
-  margin-right: -16rpx;
+  width:80rpx;
+  height: 60rpx;
+  margin-left: -20rpx;
 }
 .next-right-none {
   opacity: 0;
@@ -86,8 +86,19 @@
   width:85%;
   padding-left: 24rpx;
 }
+.list-news .address-title {
+  padding-left: 16rpx;
+}
 .list-news .number-title {
   padding-left: 38rpx;
+}
+
+.shop-phone .number-title {
+  padding-left: 31rpx;
+}
+.list-news .picture-title {
+  padding-left: 0;
+  margin-left: -18rpx;
 }
 .shop-time .icon{
   width: 40rpx;
